[gd_scene load_steps=5 format=3 uid="uid://3l8ah71xs705"]

[ext_resource type="PackedScene" uid="uid://v05h6xxurkyg" path="res://packedscenes/Menu/confirm_popup.tscn" id="1_1w22u"]
[ext_resource type="Theme" uid="uid://bpib7d5jc2102" path="res://packedscenes/Menu/menu_theme.tres" id="1_gdvt1"]
[ext_resource type="Script" path="res://scripts/ui/menu.gd" id="2_0srvy"]
[ext_resource type="PackedScene" uid="uid://do2clar5jx0l3" path="res://Main.tscn" id="3_wkicm"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("2_0srvy")
starting_scene = ExtResource("3_wkicm")

[node name="Menu-UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gdvt1")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu-UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="Menu-UI/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "New Game"

[node name="ContiueButton" type="Button" parent="Menu-UI/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Continue"

[node name="confirm_popup" parent="." instance=ExtResource("1_1w22u")]
offset_top = -112.0
offset_bottom = -112.0
message = "Are you sure you want to start a new game?"

[connection signal="button_up" from="Menu-UI/VBoxContainer/NewGameButton" to="." method="_on_newgame_button"]
[connection signal="button_up" from="Menu-UI/VBoxContainer/ContiueButton" to="." method="_on_contiue_button"]
[connection signal="_on_confirmation_popup" from="confirm_popup" to="." method="_on_popup_response"]
